@@ -4,30 +4,31 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
-BUTTON_LOGIN="Log in"
-BUTTON_LOGOUT="Log out"
-DESCLOGINFORM="This Module displays a username and password login form. It also displays a link to retrieve a forgotten password. If user registration is enabled (in the Global Configuration settings), another link will be shown to enable self-registration for users."
-ENCRYPT LOGIN FORM="Encrypt Login Form"
-FORGOT_YOUR_PASSWORD="Forgot your password?"
-FORGOT_YOUR_USERNAME="Forgot your username?"
-GREETING="Greeting"
-HINAME="Hi %s,"
-LOGIN MESSAGE="Login Message"
-LOGIN REDIRECTION URL="Login Redirection Page"
-LOGOUT MESSAGE="Logout Message"
-LOGOUT REDIRECTION URL="Logout Redirection Page"
+MOD_LOGIN_FIELD_GREETING_DESC="Show/Hide the simple greeting text"
+MOD_LOGIN_FIELD_GREETING_LABEL="Greeting"
+MOD_LOGIN_FIELD_LOGIN_REDIRECTURL_DESC="Select the page the user will be redirected to after a successful login. Select from all the pages listed in the dropdown menu. If no selection is made, the Front Page will be loaded by default."
+MOD_LOGIN_FIELD_LOGIN_REDIRECTURL_LABEL="Login Redirection Page"
+MOD_LOGIN_FIELD_LOGOUT_REDIRECTURL_DESC="Select the page the user will be redirected to after successfully ending their current session by logging out. Select from all the pages listed in the dropdown menu. If no selection is made, the Front Page will be loaded by default."
+MOD_LOGIN_FIELD_LOGOUT_REDIRECTURL_LABEL="Logout Redirection Page"
+MOD_LOGIN_FIELD_NAME_DESC="Displays Name or Username after logging"
+MOD_LOGIN_FIELD_NAME_LABEL="Name/Username"
+MOD_LOGIN_FIELD_POST_TEXT_DESC="This is the text or HTML that is displayed below the login form."
+MOD_LOGIN_FIELD_POST_TEXT_LABEL="Post-text"
+MOD_LOGIN_FIELD_PRE_TEXT_DESC="This is the text or HTML that is displayed above the login form."
+MOD_LOGIN_FIELD_PRE_TEXT_LABEL="Pre-text"
+MOD_LOGIN_FIELD_USESECURE_DESC="Submit encrypted login data (requires SSL).  Do not enable this option if Joomla is not accessible using the https:// protocol prefix."
+MOD_LOGIN_FIELD_USESECURE_LABEL="Encrypt Login Form"
+MOD_LOGIN_VALUE_NAME="Name"
+MOD_LOGIN_VALUE_USERNAME="Username"
+MOD_LOGIN_XML_DESCRIPTION="This Module displays a username and password login form. It also displays a link to retrieve a forgotten password. If user registration is enabled (in the Global Configuration settings), another link will be shown to enable self-registration for users."
+
+
+MOD_LOGIN_BUTTON_LOGIN="Log in"
+MOD_LOGIN_BUTTON_LOGOUT="Log out"
+MOD_LOGIN_FORGOT_YOUR_PASSWORD="Forgot your password?"
+MOD_LOGIN_FORGOT_YOUR_USERNAME="Forgot your username?"
+MOD_LOGIN_HINAME="Hi %s,"
+MOD_LOGIN_PASSWORD="Password"
+MOD_LOGIN_REGISTER="Create an account"
+MOD_LOGIN_REMEMBER_ME="Remember Me"
 MOD_LOGIN="Login"
-NAME_USERNAME="Name/Username"
-PARAMPOSTTEXT="This is the text or HTML that is displayed below the login form."
-PARAMPRETEXT="This is the text or HTML that is displayed above the login form."
-PARAMLOGINREDIRECTURL="Select the page the user will be redirected to after a successful login. Select from all the pages listed in the dropdown menu. If no selection is made, the Front Page will be loaded by default."
-PARAMLOGOUTREDIRECTURL="Select the page the user will be redirected to after successfully ending their current session by logging out. Select from all the pages listed in the dropdown menu. If no selection is made, the Front Page will be loaded by default."
-PARAMLOGINMESSAGE="Show/Hide the JavaScript Pop-up indicating Login Success"
-PARAMLOGOUTMESSAGE="Show/Hide the JavaScript Pop-up indicating Logout Success"
-PASSWORD="Password"
-POST-TEXT="Post-text"
-PRE-TEXT="Pre-text"
-REGISTER="Create an account"
-REMEMBER ME="Remember Me"
-SHOW_HIDE THE SIMPLE GREETING TEXT="Show/Hide the simple greeting text"
-SUBMIT_ENCRYPTED_LOGIN_DATA_DESC="Submit encrypted login data (requires SSL).  Do not enable this option if Joomla is not accessible using the https:// protocol prefix."
