@@ -37,11 +37,12 @@ $ -> Language fix or change
 ^ Refactored mod_breadcrumbs ini/keys
 ^ Refactored mod_footer ini/keys
 ^ Refactored mod_languages ini/keys
+^ Refactored mod_login (site) ini/keys + bug
 
 09-Feb-2010 Jean-Marie Simonet
 ^ Refactored mod_articles_archived ini/keys. Updated sql.
 ^ Refactored mod_articles_latest ini/keys.
-^ Refactored mod_popular ini/keys.
+^ Refactored mod_articles_popular ini/keys.
 - Deleted admin mod_stats and mod_footer in files
 
 09-Feb-2010 Christophe Demko
